# fin-eng-cpp

./: .gitignore  AmericanTrade.cpp  AmericanTrade.h  BlackScholesPricer.cpp  BlackScholesPricer.h  Bond.cpp  Bond.h  CMakeLists.txt  CMakeLists_old.txt  CSVReader.cpp  CSVReader.h  Constants.h  Date.cpp  Date.h  DateTest.cpp  EuropeanTrade.cpp  EuropeanTrade.h  JSONReader.cpp  JSONReader.h  LICENSE  Logger.cpp  Logger.h  Market.cpp  Market.h  Payoff.h  PortfolioMaker.cpp  PortfolioMaker.h  PortfolioValueLog.txt  PortfolioValueLog2.txt  Pricer.cpp  Pricer.h  QF633 Binomial Tree Validation.ipynb  QF633project_part_2_question_4.py  QF633project_part_2_question_4_v3.py  QF633project_part_2_question_4_v4.py  QF633project_part_2_question_4_v5.py  README.md  RiskEngine.cpp  RiskEngine.h  RiskPortfolio.cpp  (+31 more)
Date.dSYM/Contents/: Info.plist
Date.dSYM/Contents/Resources/DWARF/: Date
Date.dSYM/Contents/Resources/Relocations/aarch64/: Date.yml
build_mac/: CMakeCache.txt  HelloWorld  Makefile  cmake_install.cmake
data/: bondPrice.txt  curve.txt  portfolio.json  sofrdummycurve.json  stockPrice.csv  stockPrice.txt  vol_bond.csv  vol_euro.csv  voldummycurve.csv
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
market_data/: portfolio.csv  portfolio.json  stock_price_20240601.csv  stock_price_20240601.txt  stock_price_20240602.csv  stock_price_20240602.txt  usd_sofr_20240601.csv  usd_sofr_20240602.csv  usd_sofr_20240602.txt  vol_20240601.csv  vol_20240601.txt  vol_20240602.csv
not_in_use/: Barrier.cpp  Barrier.h  BarrierTrade.h  EuropeanTradeNonVirtual.cpp  EuropeanTradeNonVirtual.h  Makefile  Market.cpp  Market.h  MarketTemp.cpp  MarketTemp.h  TreePricerNonVirtual.h  TreeProductNonVirtual.h  copyCtor.cpp  copyCtor2.cpp  marketPrint.cpp  nonvirtual.cpp  oop1.cpp
output/: output_20240606_081829.txt  output_20240606_133341.txt  output_20240606_140331.txt  output_20240606_143953.txt  output_20240606_144406.txt  output_20240606_151223.txt  output_20240606_152309.txt  output_20240606_154249.txt  output_20240606_154632.txt  output_20240606_155227.txt  output_20240606_155937.txt  output_20240606_164017.txt  output_20240606_170548.txt  output_20240606_170852.txt  output_20240606_171120.txt
